--- a/new/FLL-2026-2027-Season-Robot-Game-kidachi-main/.vscode/launch.json
+++ b/new/FLL-2026-2027-Season-Robot-Game-kidachi-main/.vscode/launch.json
@@ -6,11 +6,10 @@
             "type": "debugpy",
             "request": "launch",
             "module": "pybricksdev",
-            "cwd": "${fileDirname}",
             "args": [
                 "run",
                 "ble",
-                "${fileBasename}",
+                "${file}",
                 "--name",
                 "Pybricks Hub"
             ]
@@ -20,11 +19,10 @@
             "type": "debugpy",
             "request": "launch",
             "module": "pybricksdev",
-            "cwd": "${fileDirname}",
             "args": [
                 "run",
                 "ble",
-                "${fileBasename}",
+                "${file}",
                 "--name",
                 "Pybricks Hub2"
             ]
@@ -34,11 +32,10 @@
             "type": "debugpy",
             "request": "launch",
             "module": "pybricksdev",
-            "cwd": "${fileDirname}",
             "args": [
                 "run",
                 "ble",
-                "${fileBasename}",
+                "${file}",
                 "--name",
                 "Pybricks Hub3"
             ]
