--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,46 +2,15 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "🤖 Robot 1 (Pybricks Hub)",
-            "type": "debugpy",
+            "name": "Build & Send (Hub Menu)",
+            "type": "python",
             "request": "launch",
-            "module": "pybricksdev",
-            "cwd": "${fileDirname}",
-            "args": [
-                "run",
-                "ble",
-                "${fileBasename}",
-                "--name",
-                "Pybricks Hub"
-            ]
-        },
-        {
-            "name": "🤖 Robot 2 (Pybricks Hub2)",
-            "type": "debugpy",
-            "request": "launch",
-            "module": "pybricksdev",
-            "cwd": "${fileDirname}",
-            "args": [
-                "run",
-                "ble",
-                "${fileBasename}",
-                "--name",
-                "Pybricks Hub2"
-            ]
-        },
-        {
-            "name": "🤖 Robot 3 (Pybricks Hub3)",
-            "type": "debugpy",
-            "request": "launch",
-            "module": "pybricksdev",
-            "cwd": "${fileDirname}",
-            "args": [
-                "run",
-                "ble",
-                "${fileBasename}",
-                "--name",
-                "Pybricks Hub3"
-            ]
+            "program": "${workspaceFolder}/selector.py",
+            "args": ["--hub", "Pybricks Hub"],
+            "cwd": "${workspaceFolder}",
+            "console": "integratedTerminal",
+            "justMyCode": true,
+            "env": { "PYTHONPATH": "${workspaceFolder}" }
         }
     ]
 }
